Fix spacing on Withdraw page

--- a/src/scss/_margins.scss
+++ b/src/scss/_margins.scss
@@ -36,6 +36,10 @@
   margin-bottom: 6px;
 }
 
+.mb-12 {
+  margin-bottom: 12px;
+}
+
 .mb-16 {
   margin-bottom: 16px;
 }
