--- a/src/scss/_withdraw.scss
+++ b/src/scss/_withdraw.scss
@@ -2,7 +2,7 @@
 
 .dao_funds {
     &__cont_in_withdraw {
-        margin-bottom: 30px;
+        margin-top: -28px;
         display: flex;
         align-items: center;
         gap: 12px;
@@ -11,6 +11,22 @@
         #dao_funds__val {
             font-size: 16px;
             font-weight: normal;
+        }
+    }
+}
+
+@media only screen and (max-width: 1330px) {
+    .dao_funds {
+        &__cont_in_withdraw {
+            margin-top: -8px;
+        }
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .dao_funds {
+        &__cont_in_withdraw {
+            margin-top: -16px;
         }
     }
 }
